[package]
name = "seq_generator"
version = "0.1.0"
edition = "2021"
authors = ["Matheus Henrique Pimenta-Zanon <omatheuspimenta@outlook.com>"]
description = "Generate randon DNA sequences with mutations, variations and bias."

readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
itertools = "0.12.0"
rand = "0.8.5"

[profile.release]
lto = 'thin'
opt-level = 3
overflow-checks = false
panic = 'abort'
incremental = false